5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1846_1276.log
== TEST (2019-06-24 18:31:09) 
-- CODE:
from numpy import*
qf = array(eval(input("m: ")))
print(qf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:32:40) 
-- CODE:
from numpy import*
qf = array(eval(input("m: ")))
print(qf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:37:12) 
-- CODE:
from numpy import*
qf = array(eval(input("m: ")))
print(sum(qf[i,:])
-- ERROR:
File "XXXX", line 4
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:37:40) 
-- CODE:
from numpy import*
qf = array(eval(input("m: ")))
print(sum(qf[i:])
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:37:41) 
-- CODE:
from numpy import*
qf = array(eval(input("m: ")))
print(sum(qf[i:])
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:37:41) 
-- CODE:
from numpy import*
qf = array(eval(input("m: ")))
print(sum(qf[i:])
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:37:41) 
-- CODE:
from numpy import*
qf = array(eval(input("m: ")))
print(sum(qf[i:])
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:47:57) 
-- CODE:
from numpy import*
qf = array(eval(input("m: ")))
a = sum(qf[i,:])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:56:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(m[:,j])
for p in range(7):
	if z[p]==max(z):
		print(p+1)


-- EXECUTION TIME:
1.32138
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
